--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -19,10 +19,6 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y jq
 
-          # Normaliza BASE_URL (quita slash final si existe)
-          BASE_URL="${BASE_URL%/}"
-
-          # DEBUG SEGURO: NO imprime el secret, solo confirma que existe
           echo "BASE_URL=$BASE_URL"
           echo "BDV_AGENT_SECRET_LEN=${#BDV_AGENT_SECRET}"
           if [ -z "${BDV_AGENT_SECRET:-}" ]; then
@@ -52,17 +48,11 @@ jobs:
 
           echo "Inside RTH: now=$hhmm NY -> running endpoints"
 
-          # Usa el MISMO header que Swagger: x-bdv-secret
-          auth_headers() {
-            echo "-H" "x-bdv-secret: ${BDV_AGENT_SECRET}" "-H" "accept: application/json" "-H" "Content-Type: application/json"
-          }
-
           get_json() {
             local path="$1"
             local url="${BASE_URL}${path}"
             curl -sS \
               -H "x-bdv-secret: ${BDV_AGENT_SECRET}" \
-              -H "accept: application/json" \
               -H "Content-Type: application/json" \
               --connect-timeout 10 --max-time 30 \
               "$url"
@@ -73,22 +63,18 @@ jobs:
             local path="$2"
             local url="${BASE_URL}${path}"
             local tmp_body
-            local http_code
-            local snippet
-
             tmp_body="$(mktemp)"
 
             http_code=$(
               curl -sS -o "$tmp_body" -w "%{http_code}" \
                 -X "$method" \
                 -H "x-bdv-secret: ${BDV_AGENT_SECRET}" \
-                -H "accept: application/json" \
                 -H "Content-Type: application/json" \
                 --connect-timeout 10 --max-time 30 \
                 "$url" || echo "000"
             )
 
-            snippet=$(head -c 500 "$tmp_body" | tr '\n' ' ' | sed 's/  */ /g')
+            snippet=$(head -c 400 "$tmp_body" | tr '\n' ' ' | sed 's/  */ /g')
             rm -f "$tmp_body"
 
             echo "ENDPOINT ${method} ${path} -> http_code=${http_code} | body_snippet=${snippet}"
@@ -99,52 +85,49 @@ jobs:
             fi
           }
 
-          call() {
-            local path="$1"
-            call_method "GET" "$path"
-          }
-
           # 1) Set execution mode AUTO
           call_method "POST" "/config/execution-mode?mode=auto"
 
           # 2) Set risk mode MEDIUM
           call_method "POST" "/config/risk-mode?mode=medium"
 
-          # 3) Validate config is actually in auto/medium
+          # 3) Validate config
           cfg="$(get_json "/config/status")"
           mode="$(echo "$cfg" | jq -r '.execution_mode // empty')"
           risk="$(echo "$cfg" | jq -r '.risk_mode // empty')"
           echo "CHECK config/status -> execution_mode=${mode} risk_mode=${risk}"
 
           if [ "$mode" != "auto" ]; then
-            echo "FAIL: execution_mode is not auto after POST /config/execution-mode"
-            echo "CFG_SNIPPET: $(echo "$cfg" | head -c 600 | tr '\n' ' ')"
+            echo "FAIL: execution_mode is not auto"
+            echo "CFG: $(echo "$cfg" | head -c 600 | tr '\n' ' ')"
             exit 1
           fi
 
           if [ "$risk" != "medium" ]; then
-            echo "FAIL: risk_mode is not medium after POST /config/risk-mode"
-            echo "CFG_SNIPPET: $(echo "$cfg" | head -c 600 | tr '\n' ' ')"
+            echo "FAIL: risk_mode is not medium"
+            echo "CFG: $(echo "$cfg" | head -c 600 | tr '\n' ' ')"
             exit 1
           fi
 
-          # 4) Snapshot + pending (observabilidad)
+          # 4) Snapshot (para ver precios)
           snap="$(get_json "/snapshot")"
-          echo "SNAPSHOT_SNIPPET: $(echo "$snap" | head -c 600 | tr '\n' ' ')"
+          echo "SNAPSHOT_SNIPPET: $(echo "$snap" | head -c 500 | tr '\n' ' ')"
 
+          # 5) Pending-trades (OJO: esta ruta puede no requerir secret, pero igual lo mandamos)
           pend="$(get_json "/pending-trades/")"
-          pcount="$(echo "$pend" | jq 'length' 2>/dev/null || echo "NA")"
-          echo "PENDING_COUNT=${pcount} | PENDING_SNIPPET: $(echo "$pend" | head -c 600 | tr '\n' ' ')"
+          pend_count="$(echo "$pend" | jq 'length' 2>/dev/null || echo 0)"
+          echo "PENDING_COUNT=${pend_count}"
+          echo "PENDING_SNIPPET: $(echo "$pend" | head -c 500 | tr '\n' ' ')"
 
-          # 5) Run scan
-          call "/agent/scan"
+          # 6) Scan
+          call_method "GET" "/agent/scan"
 
-          # 6) Tick (debe correr dentro de RTH)
+          # 7) Tick (debe intentar ejecutar pending trades si aplica)
           tick="$(get_json "/monitor/tick")"
           tstatus="$(echo "$tick" | jq -r '.status // empty')"
           treason="$(echo "$tick" | jq -r '.reason // empty')"
-          executed="$(echo "$tick" | jq -c '.pending_trades_executed // []' 2>/dev/null || echo "[]")"
-          echo "CHECK monitor/tick -> status=${tstatus} reason=${treason} pending_trades_executed=${executed}"
+          texec="$(echo "$tick" | jq -c '.pending_trades_executed // []')"
+          echo "CHECK monitor/tick -> status=${tstatus} reason=${treason} pending_trades_executed=${texec}"
 
           if [ "$tstatus" = "skipped" ]; then
             echo "FAIL: monitor/tick skipped inside RTH -> ${treason}"
