--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -9,7 +9,6 @@ jobs:
   bdv:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-
     steps:
       - name: BDV guard + calls
         env:
@@ -20,9 +19,6 @@ jobs:
           sudo apt-get update -y
           sudo apt-get install -y jq
 
-          # Normaliza BASE_URL (quita slash final si existe)
-          BASE_URL="${BASE_URL%/}"
-
           echo "BASE_URL=$BASE_URL"
           echo "BDV_AGENT_SECRET_LEN=${#BDV_AGENT_SECRET}"
           if [ -z "${BDV_AGENT_SECRET:-}" ]; then
@@ -31,18 +27,16 @@ jobs:
           fi
 
           TZ="America/New_York"
-          dow=$(TZ=$TZ date +%u)         # 1..7 (Mon..Sun)
-          hhmm=$(TZ=$TZ date +%H%M)      # 0000..2359
+          dow=$(TZ=$TZ date +%u)
+          hhmm=$(TZ=$TZ date +%H%M)
           now_iso=$(TZ=$TZ date +"%Y-%m-%d %H:%M:%S %Z")
           echo "NY_TIME=$now_iso (dow=$dow hhmm=$hhmm)"
 
-          # Weekend guard
           if [ "$dow" -ge 6 ]; then
             echo "Outside RTH (weekend) -> exit OK"
             exit 0
           fi
 
-          # RTH window (09:30–16:00)
           RTH_START=0930
           RTH_END=1600
           if [ "$hhmm" -lt "$RTH_START" ] || [ "$hhmm" -ge "$RTH_END" ]; then
@@ -56,7 +50,7 @@ jobs:
             local path="$1"
             local url="${BASE_URL}${path}"
             curl -sS \
-              -H "x-bdv-secret: ${BDV_AGENT_SECRET}" \
+              -H "X-BDV-SECRET: ${BDV_AGENT_SECRET}" \
               -H "Content-Type: application/json" \
               --connect-timeout 10 --max-time 30 \
               "$url"
@@ -66,16 +60,14 @@ jobs:
             local method="$1"
             local path="$2"
             local url="${BASE_URL}${path}"
-            local tmp_body
-            local http_code
-            local snippet
+            local tmp_body http_code snippet
 
             tmp_body="$(mktemp)"
 
             http_code=$(
               curl -sS -o "$tmp_body" -w "%{http_code}" \
                 -X "$method" \
-                -H "x-bdv-secret: ${BDV_AGENT_SECRET}" \
+                -H "X-BDV-SECRET: ${BDV_AGENT_SECRET}" \
                 -H "Content-Type: application/json" \
                 --connect-timeout 10 --max-time 30 \
                 "$url" || echo "000"
