--- a/.github/workflows/bdv-cron.yml
+++ b/.github/workflows/bdv-cron.yml
@@ -2,7 +2,7 @@ name: BDV Cron
 
 on:
   schedule:
-    - cron: "*/5 * * * 1-5"   # cada 5 min, lun-vie (UTC). El guard decide por ET.
+    - cron: "*/5 * * * 1-5" # cada 5 min (UTC). Guard decide por NY time.
   workflow_dispatch:
 
 jobs:
@@ -16,31 +16,47 @@ jobs:
           BDV_AGENT_SECRET: ${{ secrets.BDV_AGENT_SECRET }}
         run: |
           set -euo pipefail
+
           sudo apt-get update -y
           sudo apt-get install -y jq
 
-          # Normaliza BASE_URL (quita trailing slash si existe)
-          BASE_URL="${BASE_URL%/}"
-
-          # DEBUG SEGURO: NO imprime el secret, solo confirma que existe
-          echo "BASE_URL=${BASE_URL}"
-          echo "BDV_AGENT_SECRET_LEN=${#BDV_AGENT_SECRET}"
-          if [ -z "${BDV_AGENT_SECRET:-}" ]; then
-            echo "FAIL: BDV_AGENT_SECRET is EMPTY in GitHub Actions env"
+          if [ -z "${BASE_URL:-}" ]; then
+            echo "FAIL: BASE_URL is EMPTY"
             exit 1
           fi
 
-          get_json() {
-            local path="$1"
-            local url="${BASE_URL}${path}"
-            curl -sS \
-              -H "X-BDV-SECRET: ${BDV_AGENT_SECRET}" \
-              -H "Content-Type: application/json" \
-              --connect-timeout 10 --max-time 30 \
-              "$url"
-          }
+          if [ -z "${BDV_AGENT_SECRET:-}" ]; then
+            echo "FAIL: BDV_AGENT_SECRET is EMPTY"
+            exit 1
+          fi
 
-          call_method() {
+          # Debug seguro (sin filtrar secretos)
+          echo "BASE_URL_HOST=$(echo "$BASE_URL" | sed -E 's#https?://##' | cut -d/ -f1)"
+          echo "BDV_AGENT_SECRET_LEN=${#BDV_AGENT_SECRET}"
+
+          TZ="America/New_York"
+          dow=$(TZ=$TZ date +%u)         # 1..7 (Mon..Sun)
+          hhmm=$(TZ=$TZ date +%H%M)      # 0000..2359
+          now_iso=$(TZ=$TZ date +"%Y-%m-%d %H:%M:%S %Z")
+          echo "NY_TIME=$now_iso (dow=$dow hhmm=$hhmm)"
+
+          # Weekend guard
+          if [ "$dow" -ge 6 ]; then
+            echo "Outside RTH (weekend) -> exit OK"
+            exit 0
+          fi
+
+          # RTH window (09:30–16:00)
+          RTH_START=0930
+          RTH_END=1600
+          if [ "$hhmm" -lt "$RTH_START" ] || [ "$hhmm" -ge "$RTH_END" ]; then
+            echo "Outside RTH: now=$hhmm NY -> exit OK"
+            exit 0
+          fi
+
+          echo "Inside RTH: now=$hhmm NY -> running endpoints"
+
+          curl_json() {
             local method="$1"
             local path="$2"
             local url="${BASE_URL}${path}"
@@ -51,75 +67,53 @@ jobs:
               curl -sS -o "$tmp_body" -w "%{http_code}" \
                 -X "$method" \
                 -H "X-BDV-SECRET: ${BDV_AGENT_SECRET}" \
+                -H "accept: application/json" \
                 -H "Content-Type: application/json" \
+                --retry 2 --retry-delay 1 --retry-connrefused \
                 --connect-timeout 10 --max-time 30 \
                 "$url" || echo "000"
             )
 
             snippet=$(head -c 300 "$tmp_body" | tr '\n' ' ' | sed 's/  */ /g')
-            rm -f "$tmp_body"
-
             echo "ENDPOINT ${method} ${path} -> http_code=${http_code} | body_snippet=${snippet}"
 
             if [ "$http_code" != "200" ]; then
               echo "FAIL: ${method} ${path} returned ${http_code}"
+              rm -f "$tmp_body"
               exit 1
             fi
+
+            cat "$tmp_body"
+            rm -f "$tmp_body"
           }
 
-          # ============================================================
-          # A) FIJA CONFIG SIEMPRE (24/5). Esto elimina el "manual/low fantasma".
-          # ============================================================
+          # 1) Set AUTO
+          curl_json "POST" "/config/execution-mode?mode=auto" >/dev/null
 
-          call_method "POST" "/config/execution-mode?mode=auto"
-          call_method "POST" "/config/risk-mode?mode=medium"
+          # 2) Set MEDIUM
+          curl_json "POST" "/config/risk-mode?mode=medium" >/dev/null
 
-          cfg="$(get_json "/config/status")"
+          # 3) Verify status
+          cfg="$(curl_json "GET" "/config/status")"
           mode="$(echo "$cfg" | jq -r '.execution_mode // empty')"
           risk="$(echo "$cfg" | jq -r '.risk_mode // empty')"
           echo "CHECK config/status -> execution_mode=${mode} risk_mode=${risk}"
 
           if [ "$mode" != "auto" ]; then
-            echo "FAIL: execution_mode is not auto after POST /config/execution-mode"
-            echo "CFG_SNIPPET: $(echo "$cfg" | head -c 400 | tr '\n' ' ')"
+            echo "FAIL: execution_mode is not auto"
             exit 1
           fi
 
           if [ "$risk" != "medium" ]; then
-            echo "FAIL: risk_mode is not medium after POST /config/risk-mode"
-            echo "CFG_SNIPPET: $(echo "$cfg" | head -c 400 | tr '\n' ' ')"
+            echo "FAIL: risk_mode is not medium"
             exit 1
           fi
 
-          # ============================================================
-          # B) SOLO EJECUTA TRADING LOGIC DENTRO DE RTH (NY 09:30–16:00)
-          # ============================================================
+          # 4) Scan
+          curl_json "GET" "/agent/scan" >/dev/null
 
-          TZ="America/New_York"
-          dow=$(TZ=$TZ date +%u)         # 1..7 (Mon..Sun)
-          hhmm=$(TZ=$TZ date +%H%M)      # 0000..2359
-          now_iso=$(TZ=$TZ date +"%Y-%m-%d %H:%M:%S %Z")
-          echo "NY_TIME=$now_iso (dow=$dow hhmm=$hhmm)"
-
-          # Weekend guard
-          if [ "$dow" -ge 6 ]; then
-            echo "Weekend -> config fixed already, skip trading logic"
-            exit 0
-          fi
-
-          # RTH window (09:30–16:00)
-          RTH_START=0930
-          RTH_END=1600
-          if [ "$hhmm" -lt "$RTH_START" ] || [ "$hhmm" -ge "$RTH_END" ]; then
-            echo "Outside RTH -> config fixed already, skip trading logic"
-            exit 0
-          fi
-
-          echo "Inside RTH: running /agent/scan + /monitor/tick"
-
-          call_method "GET" "/agent/scan"
-
-          tick="$(get_json "/monitor/tick")"
+          # 5) Tick
+          tick="$(curl_json "GET" "/monitor/tick")"
           tstatus="$(echo "$tick" | jq -r '.status // empty')"
           treason="$(echo "$tick" | jq -r '.reason // empty')"
           echo "CHECK monitor/tick -> status=${tstatus} reason=${treason}"
